--- a/WiredBrainCoffee.CustomersApp/App.xaml
+++ b/WiredBrainCoffee.CustomersApp/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:WiredBrainCoffee.CustomersApp"
              StartupUri="SplashScreen.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Strings.xaml"/>
+                <ResourceDictionary Source="Resources/Brushes.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
