9-2 click event on buttons

--- a/WiredBrainCoffee.CustomersApp/MainWindow.xaml
+++ b/WiredBrainCoffee.CustomersApp/MainWindow.xaml
@@ -12,6 +12,10 @@
         Title="MainWindow" Height="450" Width="800">
     <!--Background="{StaticResource ApplicationPageBackgroundThemeBrush}"-->
 
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </Window.Resources>
+
     <!--d:DesignWidth="800"
         d:DesignHeight="450"-->
     <Grid>
@@ -90,21 +94,33 @@
                     Margin="10" 
                     Width="65" 
                     Height="30"
-                    Click="ButtonDeleteCustomer_Click">
+                    Click="ButtonDeleteCustomer_Click"
+                        IsEnabled="{Binding Path=IsCustomerSelected, Mode=OneWay}">
                     <StackPanel Orientation="Horizontal">
                         <Image Source="assets/icons/delete4.png" Height="20" Width="20"/>
                         <TextBlock Text="Delete" Margin="5 0 0 0"/>
                     </StackPanel>
                 </Button>
             </StackPanel>
-            <ListView Grid.Row="1" x:Name="customerListView"
-                      DisplayMemberPath="LastName">
+            <ListView Grid.Row="1" ItemsSource="{Binding Path=Customers, Mode=OneWay}"
+                      SelectedItem="{Binding Path=SelectedCustomer, Mode=TwoWay}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Path=FirstName, Mode=OneWay}" FontWeight="Bold"/>
+                            <TextBlock Text="{Binding Path=LastName, Mode=OneWay}" Margin="5 0 0 0"/>
+                            <TextBlock Text="(Developer)" Margin="5 0 0 0" Opacity="0.5"
+                                       Visibility="{Binding Path=IsDeveloper, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
 
         </Grid>
         <!--Customer Detail-->
         <controls:CustomerDetailControl Grid.Row="1" Grid.Column="1"
-                                        Customer="{Binding ElementName=customerListView ,Path=SelectedItem, Mode=OneWay}"/>
+                                        Customer="{Binding Path=SelectedCustomer, Mode=OneWay}"
+                                        Visibility="{Binding Path=IsCustomerSelected, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
     </Grid>
 </Window>
