--- a/WiredBrainCoffee.CustomersApp/Controls/CustomerDetailControl.xaml
+++ b/WiredBrainCoffee.CustomersApp/Controls/CustomerDetailControl.xaml
@@ -5,18 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WiredBrainCoffee.CustomersApp.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" x:Name="root">
     <StackPanel>
         <Label Content="Firstname" Margin="5 10 10 0"/>
-        <TextBox Margin="10 0" x:Name="txtFirstName"
-               TextChanged="TextBox_TextChanged"/>
+        <TextBox Margin="10 0" 
+                 Text="{Binding ElementName=root, Path=Customer.FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
         <Label Content="Lastname" Margin="5 10 10 0"/>
-        <TextBox Margin="10 0" x:Name="txtLastName"
-               TextChanged="TextBox_TextChanged"/>
+        <TextBox Margin="10 0" 
+                 Text="{Binding ElementName=root, Path=Customer.LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <CheckBox Content="Is developer" Margin="10 20 10 10" x:Name="chkIsDeveloper"
-                Checked="CheckBox_IsCheckedChanged"
-                Unchecked="CheckBox_IsCheckedChanged"/>
+        <CheckBox Content="Is developer" Margin="10 20 10 10" 
+                  IsChecked="{Binding ElementName=root, Path=Customer.IsDeveloper, Mode=TwoWay}"/>
     </StackPanel>
 </UserControl>
