--- a/WiredBrainCoffee.CustomersApp/Controls/CustomerDetailControl.xaml
+++ b/WiredBrainCoffee.CustomersApp/Controls/CustomerDetailControl.xaml
@@ -5,14 +5,23 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WiredBrainCoffee.CustomersApp.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" x:Name="root">
+             d:DesignHeight="300" d:DesignWidth="400" x:Name="root">
+    <UserControl.Resources>
+        <Style x:Key="myTxtBoxStyle" TargetType="TextBox"
+               BasedOn="{StaticResource txtBoxStyle}">
+            <!--<Setter Property="MinHeight" Value="20"/>-->
+            <Setter Property="Margin" Value="10 0"/>
+        </Style>
+        
+    </UserControl.Resources>
     <StackPanel>
         <Label Content="Firstname" Margin="5 10 10 0"/>
-        <TextBox Margin="10 0" 
+        <TextBox Style="{StaticResource myTxtBoxStyle}"
                  Text="{Binding ElementName=root, Path=Customer.FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
         <Label Content="Lastname" Margin="5 10 10 0"/>
-        <TextBox Margin="10 0" 
+
+        <TextBox Style="{StaticResource myTxtBoxStyle}"
                  Text="{Binding ElementName=root, Path=Customer.LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
         <CheckBox Content="Is developer" Margin="10 20 10 10" 
